added GET /call/find + trying to fix image upload
